--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 [project]
 name = "tuneflow-devkit-py"
-version = "0.1.0"
+version = "0.1.2"
 authors = [{ name = "Andantei", email = "contact@info.tuneflow.com" }]
 description = "Implement your music models and algorithms directly in TuneFlow - The next-gen DAW for the AI era"
 readme = "README.md"
@@ -33,9 +33,9 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    'python-socketio == 5.7.2',
-    'uvicorn[standard] == 0.20.0',
-    'tuneflow-py == 0.1.0',
+    'python-socketio >= 5.7.2',
+    'uvicorn[standard] >= 0.20.0',
+    'tuneflow-py >= 0.1.2',
 ]
 
 [project.urls]
