using msgpack for encoding params

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     'python-socketio >= 5.7.2',
     'uvicorn[standard] >= 0.20.0',
     'tuneflow-py >= 0.3.0',
+    'msgpack == 1.0.4'
 ]
 
 [project.urls]
