--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 python-socketio>=5.7.2
-uvicorn>=0.20.0
+uvicorn[standard]>=0.20.0
 tuneflow-py>=0.3.0
 msgpack==1.0.4
+fastapi==0.92.0
+msgpack-asgi==1.1.0
