--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,9 @@ dependencies = [
     'python-socketio >= 5.7.2',
     'uvicorn[standard] >= 0.20.0',
     'tuneflow-py >= 0.3.4',
-    'msgpack == 1.0.4'
+    'msgpack == 1.0.4',
+    'fastapi == 0.92.0',
+    'msgpack-asgi == 1.1.0'
 ]
 
 [project.urls]
